Add action to open the system monitor from the applet
It's also accessible by middle clicking on it
BUG:432588
FIXED-IN:5.22

--- a/applets/systemmonitor/systemmonitor/CMakeLists.txt
+++ b/applets/systemmonitor/systemmonitor/CMakeLists.txt
@@ -16,6 +16,8 @@ target_link_libraries(plasma_applet_systemmonitor
                       KF5::ConfigCore
                       KF5::ConfigGui
                       KF5::Declarative
+                      KF5::KIOGui
+                      KF5::Notifications
                       KSysGuard::SysGuard
                       KSysGuard::Sensors
                       KSysGuard::SensorFaces
