Port away from KDELibs4Support
Add explicit find_package() and #include's that are required and were
pulled in by KDELibs4Support.

krdb: remove one redundant #include, KColorUtils

kcm_fonts: send dbus message directly to org.kde.KDEPlatformTheme to
'refreshFonts'

kcm_style:
 - use KToolBar::emitToolbarStyleChanged() to notify of toolbar style changes

For the rest use the notifyKcmChange() private method to send the dbus
signal.

[1] https://invent.kde.org/frameworks/kdelibs4support/-/blob/master/src/kdeui/kglobalsettings.cpp#L860

--- a/kcms/colors/CMakeLists.txt
+++ b/kcms/colors/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"kcm_colors\")
 
 set(kcm_colors_SRCS
+    ../kcms-common_p.h
     ../krdb/krdb.cpp
     colors.cpp
     colorsapplicator.cpp
@@ -47,6 +48,7 @@ set(plasma-apply-colorscheme_SRCS
     plasma-apply-colorscheme.cpp
     colorsapplicator.cpp
     colorsmodel.cpp
+    ../kcms-common_p.h
     ../krdb/krdb.cpp
 )
 
