--- a/kcms/fonts/CMakeLists.txt
+++ b/kcms/fonts/CMakeLists.txt
@@ -5,7 +5,15 @@ add_definitions(-DTRANSLATION_DOMAIN=\"kcm_fonts\")
 
 include_directories(../kfontinst/lib)
 
-set(kcm_fonts_PART_SRCS ../krdb/krdb.cpp previewrenderengine.cpp previewimageprovider.cpp fonts.cpp fontsaasettings.cpp ../kfontinst/lib/FcEngine.cpp)
+set(kcm_fonts_PART_SRCS
+    previewrenderengine.cpp
+    previewimageprovider.cpp
+    fonts.cpp
+    fontsaasettings.cpp
+    ../kfontinst/lib/FcEngine.cpp
+    ../kcms-common_p.h
+    ../krdb/krdb.cpp
+)
 
 if(X11_FOUND)
     set(kcm_fonts_PART_SRCS ${kcm_fonts_PART_SRCS} ${libkxftconfig_SRCS})
@@ -23,7 +31,7 @@ kconfig_add_kcfg_files(kcm_fonts_PART_SRCS fontssettings.kcfgc fontsaasettingsba
 
 add_library(kcm_fonts MODULE ${kcm_fonts_PART_SRCS})
 
-target_link_libraries(kcm_fonts Qt::DBus Qt::Xml KF5::KCMUtils KF5::I18n KF5::KDELibs4Support kfontinst)
+target_link_libraries(kcm_fonts Qt::DBus Qt::Xml KF5::KCMUtils KF5::I18n kfontinst)
 
 if(X11_FOUND)
     target_link_libraries(kcm_fonts
