KCMs: put the kcm_* libs in builddir/bin/kcms/
This matches the install location scheme QT_PLUGIN_DIR/kcms/, which makes
it slightly easier to test stuff right from the builddir, without
installation, by exporting QT_PLUGIN_DIR=builddir/bin/.

Also install kcm_fontinst in QT_PLUGIN_DIR/kcms/, like the other KCMs.

--- a/kcms/feedback/CMakeLists.txt
+++ b/kcms/feedback/CMakeLists.txt
@@ -23,6 +23,7 @@ target_link_libraries(kcm_feedback
 kcoreaddons_desktop_to_json(kcm_feedback "kcm_feedback.desktop")
 
 install(FILES feedbacksettings.kcfg DESTINATION ${KDE_INSTALL_KCFGDIR})
+set_target_properties(kcm_feedback PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/kcms")
 install(TARGETS kcm_feedback DESTINATION ${KDE_INSTALL_PLUGINDIR}/kcms)
 install(FILES kcm_feedback.desktop  DESTINATION  ${KDE_INSTALL_KSERVICES5DIR})
 kpackage_install_package(package kcm_feedback kcms)
