Plasma 5.22.4 Vanilla Code

--- a/dataengines/executable/plasma-dataengine-executable.desktop
+++ b/dataengines/executable/plasma-dataengine-executable.desktop
@@ -135,6 +135,7 @@ Comment[sr@ijekavian]=Датомотор покретања извршних
 Comment[sr@ijekavianlatin]=Datomotor pokretanja izvršnih
 Comment[sr@latin]=Datomotor pokretanja izvršnih
 Comment[sv]=Datagränssnitt för att köra program
+Comment[ta]=இயக்க வல்லவற்றை தேடும் பொறி
 Comment[th]=กลไกข้อมูลการประมวลผลคำสั่ง
 Comment[tr]=Çalıştırılabilir Veri Motorunu Başlat
 Comment[ug]=ئىجراچان سانلىق-مەلۇمات ماتورىنى ئىجرا قىل
