--- a/dataengines/geolocation/plasma-dataengine-geolocation.desktop
+++ b/dataengines/geolocation/plasma-dataengine-geolocation.desktop
@@ -57,6 +57,7 @@ Name[sr@ijekavian]=геолокација
 Name[sr@ijekavianlatin]=geolokacija
 Name[sr@latin]=geolokacija
 Name[sv]=Geografisk lokalisering
+Name[ta]=புவியிருப்பிடம்
 Name[tg]=Ҷойгиршавии ҷуғрофӣ
 Name[th]=การระบุพิกัดตำแหน่ง
 Name[tr]=Geolocation
@@ -126,6 +127,7 @@ Comment[sr@ijekavian]=Датомотор геолокације
 Comment[sr@ijekavianlatin]=Datomotor geolokacije
 Comment[sr@latin]=Datomotor geolokacije
 Comment[sv]=Datagränssnitt för geografisk lokalisering
+Comment[ta]=புவியிருப்பிடத்தை வழங்கும் நிரல்
 Comment[tg]=Низоми иттилоотии ҷойгиршавӣ ҷуғрофӣ
 Comment[th]=กลไกข้อมูลการระบุพิกัดตำแหน่ง
 Comment[tr]=Geolocation Veri Motoru
