--- a/dataengines/geolocation/plasma-geolocationprovider.desktop
+++ b/dataengines/geolocation/plasma-geolocationprovider.desktop
@@ -59,6 +59,7 @@ Comment[sr@ijekavian]=Плазма добављач геолокације
 Comment[sr@ijekavianlatin]=Plasma dobavljač geolokacije
 Comment[sr@latin]=Plasma dobavljač geolokacije
 Comment[sv]=Plasma geografisk lokalisering
+Comment[ta]=பிளாஸ்மாவிற்கு புவியிருப்பிடத்தை வழங்கும் நிரல்
 Comment[th]=ผู้ให้บริการพิกัดตำแหน่งของพลาสมา
 Comment[tr]=Plasma Geolocation Sağlayıcı
 Comment[ug]=پلازما جۇغراپىيىلىك ئورۇن تەمىنلىگۈچى
