--- a/dataengines/hotplug/plasma-dataengine-hotplug.desktop
+++ b/dataengines/hotplug/plasma-dataengine-hotplug.desktop
@@ -58,7 +58,7 @@ Name[sr@ijekavian]=догађаји врућег укључивања
 Name[sr@ijekavianlatin]=događaji vrućeg uključivanja
 Name[sr@latin]=događaji vrućeg uključivanja
 Name[sv]=Inkopplingshändelser
-Name[ta]=Hotplug Events
+Name[ta]=செருக‍க்கூடியவை குறித்த நிகழ்வுகள்
 Name[th]=เหตุการณ์อุปกรณ์ Hot Plug
 Name[tr]=Tak Kullan Olayları
 Name[ug]=قىزىق قىستۇرۇش ھادىسىسى
@@ -120,6 +120,7 @@ Comment[sr@ijekavian]=Прати појављивања и нестанке вр
 Comment[sr@ijekavianlatin]=Prati pojavljivanja i nestanke vruće uklonjivih uređaja.
 Comment[sr@latin]=Prati pojavljivanja i nestanke vruće uklonjivih uređaja.
 Comment[sv]=Följer enheter som kan kopplas in under spänning när de dyker upp och försvinner.
+Comment[ta]=எப்போதேனும் செருகி கழற்றக்கூடிய சாதனங்களை கவனிக்கும்.
 Comment[th]=ติดตามการตรวจพบ/ไม่พบ อุปกรณ์ประเภทถอด/เสียบได้
 Comment[tr]=Takıldıklarında ve çıkarıldıklarında tak kullan aygıtlarını izler.
 Comment[ug]=قىزىق قىستۇرۇلىدىغان ئۈسكۈنىلەرنىڭ ھاسىل بولۇشى ۋە  يوقىلىشىنى ئىزلايدۇ.
