--- a/dataengines/packagekit/plasma-dataengine-packagekit.desktop
+++ b/dataengines/packagekit/plasma-dataengine-packagekit.desktop
@@ -45,6 +45,7 @@ Name[sr@ijekavian]=Пакиџ‑кит
 Name[sr@ijekavianlatin]=PackageKit
 Name[sr@latin]=PackageKit
 Name[sv]=PackageKit
+Name[ta]=PackageKit
 Name[tr]=PackageKit
 Name[uk]=PackageKit
 Name[vi]=PackageKit
@@ -97,6 +98,7 @@ Comment[sr@ijekavian]=Датомотор Пакиџ‑кита
 Comment[sr@ijekavianlatin]=Datomotor PackageKita
 Comment[sr@latin]=Datomotor PackageKita
 Comment[sv]=PackageKit-datagränssnitt
+Comment[ta]=PackageKit தரவு நிரல்
 Comment[tr]=PackageKit Veri Motoru
 Comment[uk]=Рушій даних PackageKit
 Comment[vi]=Dụng cụ dữ liệu PackageKit
