--- a/kcms/colors/kcm_colors.desktop
+++ b/kcms/colors/kcm_colors.desktop
@@ -90,6 +90,7 @@ Comment[zh_CN]=选择配色方案
 X-KDE-Keywords=colors,colours,scheme,contrast,Widget colors,Color Scheme,color style,color theme
 X-KDE-Keywords[az]=colors,colours,scheme,contrast,Widget colors,Color Scheme,color style,color theme rənglər, rənglər, sxem, kontrast, Widget rəngləri, Rəng sxemi, rəng tərzi, rəng mövzusu
 X-KDE-Keywords[ca]=colors,esquema,contrast,colors de giny,esquema de color,estil de color, tema de color
+X-KDE-Keywords[cs]=barvy,schéma,motiv,kontrast,barvy widgetu,barevné schéma,styl barev,barevné téma
 X-KDE-Keywords[da]=farver,tema,kontrast,widget-farver,farvetema,farvestil,farveskema
 X-KDE-Keywords[de]=Farben,Schema,Kontrast,Farbschema,Elemente
 X-KDE-Keywords[en_GB]=colours,scheme,contrast,Widget colours,Colour Scheme,colour style,colour theme
