--- a/kcms/cursortheme/kcm_cursortheme.desktop
+++ b/kcms/cursortheme/kcm_cursortheme.desktop
@@ -89,6 +89,7 @@ Comment[zh_CN]=选择鼠标光标主题
 X-KDE-Keywords=Mouse,Cursor,Theme,Cursor Appearance,Cursor Color,Cursor Theme,Mouse Theme,Mouse Appearance,Mouse Skins,Pointer Colors,Pointer Appearance
 X-KDE-Keywords[az]=Mouse,Cursor,Theme,Cursor Appearance,Cursor Color,Cursor Theme,Mouse Theme,Mouse Appearance,Mouse Skins,Pointer Colors,Pointer Appearance Siçan, kursor, mövzu, kursor görünüşü, kursor rəngi, kursor mövzusu, siçan mövzusu,Siçan görünüşü, siçan dəriləri, göstərici rəngləri, göstərici görünüşü
 X-KDE-Keywords[ca]=Ratolí,Cursor,Tema,Aparença de cursor,Color de cursor,Tema de cursor,Tema de ratolí,Aparença de ratolí,Pells de ratolí,Colors d'apuntador,Aparença d'apuntador
+X-KDE-Keywords[cs]=myš,kurzor,téma,vzhled kurzoru,barva kurzoru,téma kurzoru,téma myši,vzhled myši,motiv myši,barvy ukazatele,vzhled ukazatele
 X-KDE-Keywords[da]=Mus,markør,cursor,tema,markørens udseende,markørfarve,markørtema,musetema,musens udseende,museskin
 X-KDE-Keywords[de]=Maus,Zeiger,Mauszeiger,Zeigerfarbe,Zeigerdesign
 X-KDE-Keywords[en_GB]=Mouse,Cursor,Theme,Cursor Appearance,Cursor Colour,Cursor Theme,Mouse Theme,Mouse Appearance,Mouse Skins,Pointer Colours,Pointer Appearance
