--- a/kcms/desktoptheme/package/metadata.desktop
+++ b/kcms/desktoptheme/package/metadata.desktop
@@ -30,6 +30,7 @@ Name[ru]=Оформление рабочего стола
 Name[sk]=Plasma štýl
 Name[sl]=Plasmin slog
 Name[sv]=Plasmastil
+Name[ta]=பிளாஸ்மா தோற்றத்திட்டம்
 Name[tg]=Услуби плазма
 Name[tr]=Plazma Stili
 Name[uk]=Стиль Плазми
