--- a/kcms/nightcolor/kcm_nightcolor.desktop
+++ b/kcms/nightcolor/kcm_nightcolor.desktop
@@ -43,6 +43,7 @@ Name[zh_CN]=夜间颜色
 Comment=Adjust color temperature at night to reduce eye strain
 Comment[az]=Gözə mənfi təsirini azaltmaq üçün gecə rəng temperaturunu ayarlayın
 Comment[ca]=Ajusta la temperatura del color per a la nit per reduir la tensió ocular
+Comment[cs]=Upravit barevnou teplotu v noci pro snížení námahy očí
 Comment[de]=Farbtemperatur nachts anpassen, um die Belastung für die Augen zu reduzieen
 Comment[en_GB]=Adjust colour temperature at night to reduce eye strain
 Comment[es]=Ajustar la temperatura del color durante la noche para reducir la fatiga visual
@@ -71,6 +72,7 @@ Comment[zh_CN]=在夜间调整色温以减少视觉疲劳
 X-KDE-Keywords=kwin,window,manager,night,colors,redshift,eyes
 X-KDE-Keywords[az]=kwin,window,manager,night,colors,redshift,eyes,pəncərə,menecer,gecə,rənglər,göz,gözlər
 X-KDE-Keywords[ca]=kwin,finestra,gestor,nit,colors,desplaçament cap al roig,ulls
+X-KDE-Keywords[cs]=kwin,okno,správce,noc,barvy,redshift,oči,modré světlo
 X-KDE-Keywords[de]=kwin,fenster,window,nacht,farben,redshift,augen
 X-KDE-Keywords[en_GB]=kwin,window,manager,night,colours,redshift,eyes
 X-KDE-Keywords[es]=kwin,ventana,gestor,noche,colores,redshift,ojos
