--- a/kcms/nightcolor/package/metadata.desktop
+++ b/kcms/nightcolor/package/metadata.desktop
@@ -30,6 +30,7 @@ Name[zh_CN]=夜间颜色
 Comment=Adjust color temperature at night to reduce eye strain
 Comment[az]=Gözə mənfi təsirini azaltmaq üçün gecə rəng temperaturunu ayarlayın
 Comment[ca]=Ajusta la temperatura del color per a la nit per reduir la tensió ocular
+Comment[cs]=Upravit barevnou teplotu v noci pro snížení námahy očí
 Comment[de]=Farbtemperatur nachts anpassen, um die Belastung für die Augen zu reduzieen
 Comment[en_GB]=Adjust colour temperature at night to reduce eye strain
 Comment[es]=Ajustar la temperatura del color durante la noche para reducir la fatiga visual
